# open-pdf-studio

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  release-notes-v1.47.13.md  release-notes-v1.47.5.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android.yml  build-arm64.yml  build-windows.yml  ci.yml  nightly.yml  release.yml  render-regression.yml  windows-arm64.yml
docs/: linux-build-fixes.md  linux-test-protocol.md
docs/superpowers/: NIGHT-PLAN.md  barn-bench-run.txt  barn-deep-dive.md  improvement-log.md  rapport-render-engines-2026-07-05.html  research-pdf-viewer-tactics.md
docs/superpowers/plans/: 2026-05-08-render-regression-test.md  2026-05-11-skia-native-renderer.md  2026-06-24-takeoff-object-counting.md  2026-06-30-ai-scale-regions.md  2026-06-30-hoeveelheden-schedule.md  2026-07-04-parallel-tile-rasterizer.md  2026-07-07-compare-inherit-viewer-navigation.md  2026-07-20-pr-video-1.80.md  2026-07-20-release-1.80.0.md  2026-07-21-testprotocol-mcp.md
docs/superpowers/specs/: 2026-04-03-pixel-perfect-text-rendering.md  2026-05-08-render-regression-test-design.md  2026-05-09-mcp-app-tools.md  2026-05-11-gpu-rendering-engine-design.md  2026-05-19-multi-process-pdfium-design.md  2026-06-24-takeoff-object-counting-design.md  2026-06-30-ai-scale-regions-design.md  2026-06-30-hoeveelheden-schedule-design.md  2026-07-15-macos-release-quality-design.md
mcp-server/: measure-spread.mjs  nkd1a-fullmeasure.mjs  test-text-edit.mjs  verify-all-pdfs.mjs  verify-compare-sync.mjs  verify-continuous.mjs  verify-line-continue.mjs  verify-page-nav.mjs  verify-prefetch.mjs  verify-symbol-ap.mjs  wit-test.mjs  zoom-debounce-test.mjs  zoom-loop.mjs  zoom-observer.mjs  zoom-wheel-probe-output.json
mcp-stdio/: README.md  package.json  server.mjs
open-pdf-render/: Cargo.toml
open-pdf-render/examples/: color_probe.rs  corpus_diff.rs  img_probe.rs  mv03_probe.rs  op_histo.rs  profile_image_stages.rs
open-pdf-render/src/: content_stream.rs  encoding.rs  font_parser.rs  fonts.rs  interpreter.rs  lib.rs  parser.rs  renderer.rs  text_renderer.rs  tile_render.rs
open-pdf-render/tests/: test_3037_cmap.rs  test_3037_encoding.rs  test_3037_findF.rs  test_3037_fonts.rs  test_3037_fonttype.rs  test_3037_glyphmap.rs  test_3037_render.rs  test_3037_tounicode.rs  test_3037_trace.rs  test_text_analysis.rs
open-pdf-studio/: index.html  package-lock.json  package.json  probe.cjs  styles.css  test-performance-cdp.mjs  vite.config.js
open-pdf-studio/js/: assistant-mcp-relay.js  assistant-skills.js  bridge.ts  main.js  mcp-bridge.js
open-pdf-studio/js/annotations/: alignment.js  clipboard.js  dimension-types.js  geometry.js  handles.js  image-crop-overlay.js  image-drop.js  measurement.js  mutations.js  paste-in-place.js  rendering.js  scale-from-measurement.js  scale-region.js  segment-ops.js  size-matching.js  smart-guides.js  spline-arrow-geometry.js  stamp-defaults.js  stamps.js  style-types.js  transforms.js  xfdf.js  z-order.js
open-pdf-studio/scripts/: bump-version.js  create-render-fixture.mjs  dxf-elektra-convert.mjs  dxf-vloeren-convert.mjs  linux-appimage-smoke.sh  linux-appimage-smoke.test.sh  linux-release-config.test.mjs  macos-notarization-retry.mjs  macos-startup-smoke.sh  native-runtime.mjs  native-runtime.test.mjs  png-predictor.test.mjs  release-config.test.mjs  run-dev-debug.mjs  square-image-annotation.test.mjs  test-annotation-undo.mjs  test-arrange-same-size.mjs  test-edit-undo-coverage.mjs  test-freetext-rotation.mjs  test-line-clipboard.mjs  test-line-selection-visual.mjs  test-move-sweep.ps1  test-page-rotate-ribbon-location.mjs  test-paste-in-place.mjs  test-pdf-text-native-editing.mjs  test-rotate-snap.ps1  test-status-reply.mjs  test-steel-catalog.mjs  test-symbol-library-online.mjs  test-text-edit-position.mjs  test-text-editor-font-and-select-all.mjs  test-text-selection-ghost.mjs
open-pdf-studio/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  test.manifest  test.rc  test.res
open-pdf-studio/src-tauri/.cargo/: config.toml
open-pdf-studio/src-tauri/binaries/win-arm64/: README.md
open-pdf-studio/src-tauri/capabilities/: default.json  mobile.json
open-pdf-studio/src-tauri/icons/: icon.icns
open-pdf-studio/src-tauri/nsis/: hooks.nsh  installer.nsi
open-pdf-studio/src-tauri/src/: accounts.rs  email.rs  lib.rs  linux_runtime.rs  main.rs  mcp_server.rs  pdfium_renderer.rs  render_to_png.rs  startup_diagnostics.rs  window_mgmt.rs
open-pdf-studio/src-tauri/src/worker_pool/: mod.rs  routing.rs  spawn.rs  state.rs
open-pdf-studio/src-tauri/tests/: pdfium_concurrency.rs  pdfium_region_smoke.rs  pdfium_smoke.rs  pool_parity.rs  startup_diagnostics.rs
open-pdf-studio/styles/: account.css  ai-panel.css  backstage.css  dialogs.css  document-tabs.css  fonts.css  form-layer.css  layout.css  mini-log.css  mobile.css  panels.css  properties-panel.css  ribbon.css  rtl.css  schedule-panel.css  status-bar.css  symbol-palette.css  text-layer.css  themes.css  tool-palette.css
pdfium-worker/src/: main.rs  protocol.rs  render.rs  shm.rs
pocs/shared/: baseline-2026-05-13T08-22-31.json  baseline-2026-05-13T08-23-39.json  bench-end-to-end.mjs  bench-harness.mjs  bench-layers.mjs
scripts/: _iter7_baseline.py  _iter7_diff.py  _iter7_fonts.py  _iter7_inspect.py  _iter7_postcheck.py  _iter7_summary.py  compare_pages.py  compare_runs.py  dump_type1.py  extract_im4.py  inspect_tekst.py  inspect_tekst_xobj.py  iter21_microscopy.py  iter29_annot_check.py  iter29_forensics.py  iter29_inspect.py  iter29_zoom.py  mupdf_compare_helper.py  run-render-regression.mjs  summarize.py  verify-mupdf-compare.mjs  verify-rotation-sweep.mjs
scripts/render_test/: main.py  reference.py
snap/: snapcraft.yaml
test pdf-bestanden/: bench-all.ps1  bench-barn-timeout.ps1  bench-simple.ps1
test pdf-bestanden/render-regression-runs2/: latest_summary.json
test pdf-bestanden/render-regression-runs3/: latest_summary.json
tests/protocol/: README.md  runner.mjs
(+697 files in other folders)
