[workspace]
resolver = "2"
members = [
  "open-pdf-studio/src-tauri",
  "open-pdf-render",
  "pdfium-worker",
]

# De eigen render-engine is in unoptimized debug 10-30x trager (5M-ops
# CAD-blad: scene-build 40+ s i.p.v. ~2 s) — dev-builds krijgen daarom
# geoptimaliseerde codegen voor de engine en zijn hete dependencies.
# De app-crate zelf blijft snel compileren.
[profile.dev.package.open-pdf-render]
opt-level = 3

# Alle externe dependencies geoptimaliseerd (eenmalige extra compile, daarna
# gecachet); workspace-crates behouden snelle debug-compiles.
[profile.dev.package."*"]
opt-level = 2
