[package]
name = "open-pdf-studio"
version = "1.16.0"
description = "A free, open-source PDF annotation editor"
authors = ["OpenAEC Foundation"]
license = "MIT"
repository = "https://github.com/OpenAEC-Foundation/Open-2D-Studio"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.2", features = ["devtools", "image-png"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2"
dirs = "5"
whoami = "1"
base64 = "0.22"
open = "5"

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-updater = "2"
