[package]
name = "open-pdf-studio"
version = "1.81.0"
description = "A free, open-source PDF annotation editor"
authors = ["OpenAEC Foundation"]
license = "MIT"
repository = "https://github.com/OpenAEC-Foundation/Open-2D-Studio"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.2", features = ["devtools", "image-png"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2"
dirs = "5"
whoami = "1"
base64 = "0.22"
open = "5"
zip = "2"

tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
# Reads a bitmap off the system clipboard for the screenshot-annotate feature
# (Windows PrtScn puts the capture on the clipboard). Cross-platform.
tauri-plugin-clipboard-manager = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "multipart"], default-features = false }
open-pdf-render = { path = "../../open-pdf-render" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
pdfium-render = { version = "0.9", features = ["thread_safe", "image_025"] }
clap = { version = "4", features = ["derive"] }

# OpenAEC Accounts ("Sign in with OpenAEC", accounts.rs): PKCE + OS-keyring
# token storage + multipart uploads to the Accounts API.
keyring = { version = "3", features = ["windows-native"] }
sha2 = "0.10"
rand = "0.8"
url = "2"
urlencoding = "2"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "net", "process", "io-util", "time"] }
memmap2 = "0.9"
anyhow = "1"

# In-process MCP server for the render-regression-test harness. We hand-roll
# the JSON-RPC layer on top of axum rather than pulling in `rmcp`, because
# rmcp's macro-driven API has churned across versions and the harness only
# needs a small fixed method set (initialize / tools/list / tools/call).
axum = "0.8"

# Direct dep for MCP tool handlers that need to inspect PDF structure (page
# count, etc). Pinned to match `open-pdf-render`'s transitive version so the
# resolver picks a single lopdf in Cargo.lock.
lopdf = "0.34"

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-updater = "2"
# Drag-out window detach — desktop only (the crate has no mobile platform
# backend and fails to compile for Android/iOS).
tauri-plugin-drag = "2.1.1"
# Global system hotkey (PrtScn) for the opt-in screenshot-annotate feature.
# Desktop only.
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Graphics_Printing", "Win32_Graphics_Gdi", "Win32_Storage_Xps", "Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }
